--- a/ParkyAPI/appsettings.json
+++ b/ParkyAPI/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
+  },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=(localdb)\\mssqllocaldb;Database=Parky;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": ""
   }
 }
